package com.quantis.dashboard_gateway.client;

import com.quantis.dashboard_gateway.model.OrderData;
// import com.quantis.order_ingress.grpc.*;
import lombok.RequiredArgsConstructor;
import lombok.extern.slf4j.Slf4j;
import net.devh.boot.grpc.client.inject.GrpcClient;
import org.springframework.stereotype.Component;
import reactor.core.publisher.Mono;

import java.math.BigDecimal;
import java.time.Instant;
import java.util.ArrayList;
import java.util.List;
import java.util.UUID;

/**
 * gRPC Client for Order Ingress Service
 * 
 * Provides high-performance access to order management via gRPC
 * while maintaining low latency for trading operations
 */
@Component
@RequiredArgsConstructor
@Slf4j
public class OrderClient {

    // @GrpcClient("order-ingress-service")
    // private OrderIngressServiceGrpc.OrderIngressServiceBlockingStub orderStub;

    /**
     * Place a new order
     */
    public Mono<OrderData.Order> placeOrder(OrderData.PlaceOrderInput input) {
        // TODO: Implement when gRPC classes are generated
        return Mono.just(OrderData.Order.builder()
            .orderId(UUID.randomUUID().toString())
            .userId(input.getUserId())
            .symbol(input.getSymbol())
            .side(input.getSide())
            .quantity(input.getQuantity())
            .price(input.getPrice())
            .orderType(input.getOrderType())
            .timeInForce(input.getTimeInForce())
            .status("PENDING")
            .filledQuantity(BigDecimal.ZERO)
            .averagePrice(BigDecimal.ZERO)
            .createdAt(Instant.now())
            .updatedAt(Instant.now())
            .executedAt(null)
            .commission(BigDecimal.ZERO)
            .metadata("")
            .build());
    }

    /**
     * Cancel an existing order
     */
    public Mono<Boolean> cancelOrder(String orderId) {
        // TODO: Implement when gRPC classes are generated
        return Mono.just(true);
    }

    /**
     * Get order status
     */
    public Mono<OrderData.Order> getOrderStatus(String orderId) {
        // TODO: Implement when gRPC classes are generated
        return Mono.just(getDefaultOrder(orderId));
    }

    /**
     * Get order history for a user
     */
    public Mono<List<OrderData.Order>> getOrderHistory(String userId, Integer limit, String status) {
        return Mono.fromCallable(() -> {
            try {
                // This would typically call a REST endpoint or gRPC service
                // For now, return empty list
                return new ArrayList<>();
            } catch (Exception e) {
                log.error("Error getting order history for user: {}", userId, e);
                return new ArrayList<>();
            }
        });
    }

    /**
     * Get active orders for a user
     */
    public Mono<List<OrderData.Order>> getActiveOrders(String userId) {
        return Mono.fromCallable(() -> {
            try {
                // This would typically call a REST endpoint or gRPC service
                // For now, return empty list
                return new ArrayList<>();
            } catch (Exception e) {
                log.error("Error getting active orders for user: {}", userId, e);
                return new ArrayList<>();
            }
        });
    }

    // Helper methods
    private OrderData.Order getDefaultOrder(String orderId) {
        return OrderData.Order.builder()
            .orderId(orderId)
            .userId("")
            .symbol("")
            .side("")
            .quantity(BigDecimal.ZERO)
            .price(BigDecimal.ZERO)
            .orderType("")
            .timeInForce("")
            .status("NOT_FOUND")
            .filledQuantity(BigDecimal.ZERO)
            .averagePrice(BigDecimal.ZERO)
            .createdAt(Instant.now())
            .updatedAt(Instant.now())
            .build();
    }
}
